--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: flex-start;
   min-width: 320px;
   min-height: 100vh;
 }
